Missing call to DidRecalcStyle for TextControlElement base.

Was lost when introducing override in HTMLInputElement in [1].

[1] https://chromium-review.googlesource.com/c/chromium/src/+/1072650

Bug: 871249
Change-Id: I9f33c88913dd00bf9f301b02fdb99bc43ecf82c6
Reviewed-on: https://chromium-review.googlesource.com/1172140
Reviewed-by: Anders Ruud <andruud@chromium.org>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582540}
Former-commit-id: dbcb1e96fe94ba00f555422ac717a459620674c0